# reflex-desktop

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: signing.md  updater.md
example/: .gitignore  README.md  pyproject.toml  rxconfig.py
example/counter/: counter.py
src/reflex_desktop/: __init__.py  bootstrap.py  cli.py  codegen.py  config.py  desktop.py  plugin.py  preflight.py  runtime.py
src/reflex_desktop/scaffold/embedded/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/reflex_desktop/scaffold/embedded/src-tauri/src/: main.rs
src/reflex_desktop/scaffold/remote/src-tauri/: Cargo.toml  tauri.conf.json
src/reflex_desktop/scaffold/remote/src-tauri/permissions/: reflex-desktop.toml
src/reflex_desktop/scaffold/remote/src-tauri/src/: main.rs
tests/: test_cli.py  test_codegen.py  test_command_registration.py  test_desktop.py  test_phase2.py  test_plugin.py  test_preflight.py
