[project]
name = "reflex-desktop"
version = "0.1.0"
description = "Package a Reflex app as a native desktop app with Tauri."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reflex",
    "click>=8.1.0",
]

[project.scripts]
reflex-desktop = "reflex_desktop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reflex_desktop"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
