[project]
name = "reflex-desktop"
version = "0.2.0"
description = "Package a Reflex app as a native desktop app with Tauri."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["reflex", "tauri", "desktop", "packaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "reflex",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/FarhanAliRaza/reflex-desktop"
Repository = "https://github.com/FarhanAliRaza/reflex-desktop"
Changelog = "https://github.com/FarhanAliRaza/reflex-desktop/blob/master/CHANGELOG.md"
Issues = "https://github.com/FarhanAliRaza/reflex-desktop/issues"

[project.scripts]
reflex-desktop = "reflex_desktop.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reflex_desktop"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
