[project]
name = "reflex-desktop-counter"
version = "0.1.0"
description = "reflex-desktop example: a counter desktop app."
requires-python = ">=3.10,<3.14"
dependencies = [
    "reflex>=0.9",
    "reflex-desktop",
]

[tool.uv.sources]
# Use Reflex from PyPI; only the (unpublished) plugin is taken from the local checkout.
reflex-desktop = { path = "..", editable = true }

# Standalone project: don't get absorbed into the parent repo's uv workspace.
[tool.uv.workspace]
members = []
