[package]
name = "__CRATE_NAME__"
version = "0.1.0"
edition = "2021"

[build-dependencies]
serde_json = "1"
tauri-build = { version = "2" }

[dependencies]
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-dialog = { version = "2" }
# Embedding (host program) mode: link the full version-specific libpython, NOT abi3.
# At build time set PYO3_PYTHON to the bundled python-build-standalone interpreter so
# the binary links against the runtime it will ship with.
pyo3 = { version = "0.22", features = ["auto-initialize"] }

[[bin]]
name = "__CRATE_NAME__"
path = "src/main.rs"
