[package]
name = "__CRATE_NAME__"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }

[[bin]]
name = "__CRATE_NAME__"
path = "src/main.rs"
